Use Android-compatible file APIs in exporter tests