@@ -3,6 +3,7 @@ package app.dawnflux;
 import org.junit.Test;
 import org.json.JSONObject;
 import java.nio.file.*;
+import java.nio.charset.StandardCharsets;
 import java.time.OffsetDateTime;
 import java.util.List;
 import static org.junit.Assert.*;
@@ -21,8 +22,8 @@ public class ExportTest {
         assertTrue(object.getJSONArray("morning_light").getJSONObject(1).getBoolean("target_reached"));
         assertFalse(object.has("settings"));
         Path dir=Path.of("build","contract-fixtures"); Files.createDirectories(dir);
-        Files.writeString(dir.resolve("android-session.json"),json);
-        Files.writeString(dir.resolve("android-session.csv"),csv);
+        Files.write(dir.resolve("android-session.json"),json.getBytes(StandardCharsets.UTF_8));
+        Files.write(dir.resolve("android-session.csv"),csv.getBytes(StandardCharsets.UTF_8));
     }
     @Test(expected=IllegalArgumentException.class) public void activeSessionCannotExport() throws Exception { Export.rows(session("active","good"),List.of()); }
     @Test(expected=IllegalArgumentException.class) public void emptySessionCannotExport() throws Exception { Export.rows(session("complete","poor"),List.of()); }
